--- a/js-issue-tracker/index.html
+++ b/js-issue-tracker/index.html
@@ -1,11 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <title>JS Issue Tracker</title>
-    <script type="text/javascript" src="main.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script defer src="http://chancejs.com/chance.min.js"></script>
+  <script defer type="text/javascript" src="main.js"></script>
+  <title>JS Issue Tracker</title>
+</head>
+<body onload="fetchIssues()">
+  <div class="container">
+    <h1>JS Issue Tracker <small>by CodingTheSmartWay</small></h1>
+    <div class="jumbotron">
+      <h3>Add New Issue:</h3>
+      <form id="issueInputForm" action="">
+        <div class="form-group">
+          <label for="issueDescInput">Description</label>
+          <input type="text" class="form-control" id="issueDescInput" placeholder="Describe the issue...">
+        </div>
+        <div class="form-group">
+          <label for="issueDescInput">Severity</label>
+            <select class="form-control" id="issueSeverityInput">
+              <option value="Low">Low</option>
+              <option value="Medium">Medium</option>
+              <option value="High">High</option>
+            </select>
+        </div>
+        <div class="form-group">
+          <label for="issueDescInput">Assigned to</label>
+          <input type="text" class="form-control" id="issueAssignedToInput" placeholder="Enter responsible...">
+        </div>
+        <button type="submit" class="btn btn-primary">Add</button>
+      </form>
+    </div>
 
-    <!-- boilerplate for now -->
-  </body>
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="issuesList"></div>
+        <!-- boilerplate for dynamically generating issue list -->
+      </div>
+    </div>
+    <div class="footer">
+      <p>Tutorial &copy CodingTheSmartWay</p>
+    </div>
+  </div>
+</body>
 </html>
